chore: from labs to web3

--- a/blog.html
+++ b/blog.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>blog - polares.labs</title>
+    <title>blog - polares.web3</title>
     <meta name="author" content="0xP0lares" />
     <meta
       name="description"
-      content="Articles from polares.labs - thoughts on security, validator logic, protocol design."
+      content="Articles from polares.web3 - thoughts on security, validator logic, protocol design."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./mystyle.css" />
@@ -15,7 +15,7 @@
 
   <body>
     <header>
-      <h1>polares.labs</h1>
+      <h1>polares.web3</h1>
       <p class="tagline">minimal design for maximal security</p>
       <nav>
         <ul>
