--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>0xPolares Labs</title>
+    <title>0xPolares web3</title>
 
     <meta name="author" content="0xP0lares" />
     <meta
@@ -22,7 +22,7 @@
             alt="Logo"
             style="height: 50px; margin-top: 10px; margin-bottom: 10px;"
           />
-      <h1>polares.labs</h1>
+      <h1>polares web3</h1>
       <p class="tagline">minimal design for maximal security</p>
       <nav>
         <ul>
@@ -135,7 +135,7 @@
           </a>
           <!-- YouTube -->
           <a
-            href="https://www.youtube.com/@PolaresLabs"
+            href="https://www.youtube.com/@Polaresweb3"
             target="_blank"
             aria-label="YouTube"
           >
