--- a/clients.html
+++ b/clients.html
@@ -3,13 +3,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Clients - polares.labs</title>
+    <title>Clients - polares.web3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./mystyle.css" />
   </head>
   <body>
     <header>
-      <h1>polares.labs</h1>
+      <h1>polares.web3</h1>
       <p class="tagline">minimal design for maximal security</p>
       <nav>
         <ul>
