--- a/404.html
+++ b/404.html
@@ -1,39 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <title>404 – not found</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="./mystyle.css" />
-  <style>
-    body {
-      background: #0e0e0e;
-      color: #f2f2f2;
-      font-family: monospace;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      height: 100vh;
-      margin: 0;
-      flex-direction: column;
-      text-align: center;
-    }
+  <head>
+    <meta charset="UTF-8" />
+    <title>404 – not found</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./mystyle.css" />
+    <style>
+      body {
+        background: #0e0e0e;
+        color: #f2f2f2;
+        font-family: monospace;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        height: 100vh;
+        margin: 0;
+        flex-direction: column;
+        text-align: center;
+      }
 
-    a {
-      color: #61dafb;
-      text-decoration: none;
-      margin-top: 1rem;
-      font-size: 0.95rem;
-    }
+      a {
+        color: #61dafb;
+        text-decoration: none;
+        margin-top: 1rem;
+        font-size: 0.95rem;
+      }
 
-    a:hover {
-      text-decoration: underline;
-    }
-  </style>
-</head>
-<body>
-  <h1>404</h1>
-  <p>this page doesn't exist.</p>
-  <a href="index.html">← back to home</a>
-</body>
+      a:hover {
+        text-decoration: underline;
+      }
+    </style>
+  </head>
+  <body>
+    <h1>404</h1>
+    <p>this page doesn't exist.</p>
+    <a href="index.html">← back to home</a>
+  </body>
 </html>
