--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
 
   <body>
     <header>
-                <img
-            src="images/logo.png"
-            alt="Logo"
-            style="height: 50px; margin-top: 10px; margin-bottom: 10px;"
-          />
+      <img
+        src="images/logo.svg"
+        alt="Logo"
+        style="height: 200px; margin-top: -20px; margin-bottom: -50px"
+      />
       <h1>polares web3</h1>
       <p class="tagline">minimal design for maximal security</p>
       <nav>
@@ -69,7 +69,11 @@
 
       <section>
         <h2>contact</h2>
-        <p><a href="mailto:r.persiani@protonmail.com">r.persiani@protonmail.com</a></p>
+        <p>
+          <a href="mailto:r.persiani@protonmail.com"
+            >r.persiani@protonmail.com</a
+          >
+        </p>
         <p>
           <a href="plr_pubkey.asc" download
             >Download PGP key for encrypted comms</a
