chore: add logo

--- a/clients.html
+++ b/clients.html
@@ -9,7 +9,11 @@
   </head>
   <body>
     <header>
-      <h1>polares.web3</h1>
+      <img
+        src="images/logo.svg"
+        alt="Logo"
+        style="height: 200px; margin-top: -20px; margin-bottom: -50px"
+      />
       <p class="tagline">minimal design for maximal security</p>
       <nav>
         <ul>
