fix: paths, add sigs, minors

--- a/clients.html
+++ b/clients.html
@@ -77,6 +77,16 @@
             alt="reinvest"
             style="height: 40px;"
           />
+                     <img
+            src="images/wide.svg"
+            alt="reinvest"
+            style="height: 55px; margin-top: 10px;"
+          />
+                     <img
+            src="images/explus.svg"
+            alt="reinvest"
+            style="height: 65px; margin-top: 20px;"
+          />
       </section>
     </main>
 
