--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
     <link rel="icon" href="/polare.jpg" />
     <link rel="stylesheet" href="./mystyle.css" />
     <link rel="icon" href="favicon.svg" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
   </head>
 
   <body>
@@ -84,55 +88,21 @@
         <h2>follow</h2>
         <div class="social-bar">
           <a
-            href="https://github.com/0xPolares"
+            href="https://github.com/riccardopersiani"
             target="_blank"
             aria-label="GitHub"
           >
             <!-- GitHub Icon -->
             <svg
+              xmlns="http://www.w3.org/2000/svg"
+              width="24"
               height="24"
+              fill="currentColor"
+              class="bi bi-github"
               viewBox="0 0 16 16"
-              fill="currentColor"
-              xmlns="http://www.w3.org/2000/svg"
             >
               <path
-                d="M8 .198a8 8 0 0 0-2.53 15.59c.4.075.547-.173.547-.384 0-.19-.007-.693-.01-1.36-2.226.483-2.695-1.073-2.695-1.073-.364-.924-.89-1.17-.89-1.17-.727-.497.055-.487.055-.487.803.056 1.226.825 1.226.825.715 1.224 1.874.87 2.33.666.072-.518.28-.87.51-1.07-1.777-.202-3.644-.888-3.644-3.953 0-.873.31-1.588.824-2.148-.083-.202-.357-1.015.078-2.117 0 0 .67-.215 2.2.82a7.638 7.638 0 0 1 2-.27c.68.003 1.37.092 2 .27 1.53-1.035 2.197-.82 2.197-.82.437 1.102.163 1.915.08 2.117.513.56.823 1.275.823 2.148 0 3.073-1.87 3.75-3.65 3.948.29.25.543.735.543 1.48 0 1.07-.01 1.93-.01 2.2 0 .212.144.462.55.384A8.001 8.001 0 0 0 8 .198z"
-              />
-            </svg>
-          </a>
-
-          <a
-            href="https://x.com/0xPolares"
-            target="_blank"
-            aria-label="X / Twitter"
-          >
-            <!-- X.com (Twitter) Icon -->
-            <svg
-              height="24"
-              viewBox="0 0 24 24"
-              fill="currentColor"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M21.5 2h-4.75l-4.24 6.61L8.22 2H2.5l6.75 10.5L2 22h4.75l4.59-7.16L15.78 22h5.72l-7.25-11.13L21.5 2z"
-              />
-            </svg>
-          </a>
-
-          <a
-            href="https://linkedin.com/in/riccardopersiani/"
-            target="_blank"
-            aria-label="LinkedIn"
-          >
-            <!-- LinkedIn Icon -->
-            <svg
-              height="24"
-              viewBox="0 0 24 24"
-              fill="currentColor"
-              xmlns="http://www.w3.org/2000/svg"
-            >
-              <path
-                d="M19 0h-14c-2.76 0-5 2.24-5 5v14c0 2.76 2.24 5 5 5h14c2.77 0 5-2.24 5-5v-14c0-2.76-2.23-5-5-5zm-11.5 19h-3v-10h3v10zm-1.5-11.28c-.97 0-1.75-.79-1.75-1.75s.78-1.75 1.75-1.75 1.75.78 1.75 1.75-.78 1.75-1.75 1.75zm13 11.28h-3v-5.6c0-1.34-.03-3.06-1.86-3.06-1.86 0-2.15 1.45-2.15 2.95v5.7h-3v-10h2.89v1.36h.04c.4-.76 1.38-1.56 2.85-1.56 3.05 0 3.62 2 3.62 4.59v5.61z"
+                d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27s1.36.09 2 .27c1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.01 8.01 0 0 0 16 8c0-4.42-3.58-8-8-8"
               />
             </svg>
           </a>
@@ -143,13 +113,15 @@
             aria-label="YouTube"
           >
             <svg
-              height="24"
-              viewBox="0 0 24 24"
-              fill="currentColor"
               xmlns="http://www.w3.org/2000/svg"
+              width="24"
+              height="24"
+              fill="currentColor"
+              class="bi bi-youtube"
+              viewBox="0 0 16 16"
             >
               <path
-                d="M23.5 6.2s-.2-1.6-.8-2.3c-.8-.9-1.6-1-2-1.1C17.3 2.5 12 2.5 12 2.5h0s-5.3 0-8.7.3c-.5.1-1.2.2-2 1.1-.6.7-.8 2.3-.8 2.3S0 8.2 0 10.3v1.4c0 2.1.2 4.1.2 4.1s.2 1.6.8 2.3c.8.9 1.9.9 2.4 1 1.8.2 7.6.3 7.6.3s5.3 0 8.7-.3c.5-.1 1.2-.2 2-1.1.6-.7.8-2.3.8-2.3s.2-2 .2-4.1v-1.4c0-2.1-.2-4.1-.2-4.1zM9.5 14.5v-5l5 2.5-5 2.5z"
+                d="M8.051 1.999h.089c.822.003 4.987.033 6.11.335a2.01 2.01 0 0 1 1.415 1.42c.101.38.172.883.22 1.402l.01.104.022.26.008.104c.065.914.073 1.77.074 1.957v.075c-.001.194-.01 1.108-.082 2.06l-.008.105-.009.104c-.05.572-.124 1.14-.235 1.558a2.01 2.01 0 0 1-1.415 1.42c-1.16.312-5.569.334-6.18.335h-.142c-.309 0-1.587-.006-2.927-.052l-.17-.006-.087-.004-.171-.007-.171-.007c-1.11-.049-2.167-.128-2.654-.26a2.01 2.01 0 0 1-1.415-1.419c-.111-.417-.185-.986-.235-1.558L.09 9.82l-.008-.104A31 31 0 0 1 0 7.68v-.123c.002-.215.01-.958.064-1.778l.007-.103.003-.052.008-.104.022-.26.01-.104c.048-.519.119-1.023.22-1.402a2.01 2.01 0 0 1 1.415-1.42c.487-.13 1.544-.21 2.654-.26l.17-.007.172-.006.086-.003.171-.007A100 100 0 0 1 7.858 2zM6.4 5.209v4.818l4.157-2.408z"
               />
             </svg>
           </a>
