--- a/blog.html
+++ b/blog.html
@@ -10,7 +10,7 @@
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./mystyle.css" />
-    <link rel="icon" href="favicon.svg" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
   </head>
 
   <body>
