--- a/clients.html
+++ b/clients.html
@@ -6,6 +6,7 @@
     <title>Clients - polares.web3</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./mystyle.css" />
+        <link rel="icon" type="image/png" href="images/favicon.png" />
   </head>
   <body>
     <header>
