--- a/index.html
+++ b/index.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8" />
     <title>0xPolares web3</title>
 
-    <meta name="author" content="0xP0lares" />
+    <meta name="author" content="Polares.Web3" />
     <meta
       name="description"
       content="Lean blockchain consulting. Secure primitives, protocol audits, validator incentives. Zero fluff."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/polare.jpg" />
     <link rel="stylesheet" href="./mystyle.css" />
-    <link rel="icon" href="favicon.svg" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
     <link
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
